[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Parallax60.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Assets/Parallax100.png" type="Texture" id=4]
[ext_resource path="res://Assets/Parallax80.png" type="Texture" id=5]
[ext_resource path="res://Assets/BackdropBlackLittleSparkTransparent.png" type="Texture" id=6]
[ext_resource path="res://Assets/Space Background Music.mp3" type="AudioStream" id=7]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://PauseHUD.tscn" type="PackedScene" id=10]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
asteroid_scene = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayerBack" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayerBack"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 2000 )

[node name="ParallaxLayerMid" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayerMid"]
modulate = Color( 1, 1, 0, 1 )
texture = ExtResource( 5 )
flip_v = true
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 2000 )

[node name="ParallaxLayerFront" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )
motion_mirroring = Vector2( 2000, 2000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayerFront"]
modulate = Color( 0.501961, 0.501961, 1, 1 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 2000 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2000, 2000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 2000 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HUD" parent="." instance=ExtResource( 9 )]

[node name="PauseHUD" parent="." instance=ExtResource( 10 )]
pause_mode = 2

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="resume_game" from="PauseHUD" to="." method="_on_PauseHUD_resume_game"]
[connection signal="surrender_game" from="PauseHUD" to="." method="_on_PauseHUD_surrender_game"]
